--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
 
-Magick Rotation 1.3						January 28, 2011
+Magick Rotation 1.4						May 15, 2011
 
 
 ChangeLog:
 
+v. 1.4 (5-15-11) - Added Coordinate Transformation Matrix to xrotate.py for evdev device rotation.  Added whitelist.py to enable the Magick Rotation icon in Ubuntu Natty's Unity system tray.  Firstrun install now adds magick-rotation to the autostart.
 v. 1.3 (01-28-11) - Added Dell XT & XT2, HP Compaq TC4200 & TC4400, Lenovo ThinkPads, and MagickExtras folder containing Rafi Rubin's modified dell-wmi & dkms.  Fixed disable/enable switch  ChangeLog moved from Magick-README.txt to separate ChangeLog file.
 v. 1.2 (12-03-11) - Removed hp-wmi out of magick-rotation, changed magick-rotation to listen to xrandr events, added installer to help get dependencies and compile check.c
 v. 1.1 (10-28-10) - Added touch on/off feature with associated icons, changed config file from .conf to .xml, removed separator line above buttons, modified About dialog label, changed description box in magick-rotation
