--- a/ChangeLog
+++ b/ChangeLog
@@ -4,10 +4,10 @@ Magick Rotation 1.5						October 9, 2011
 
 ChangeLog:
 
-v. 1.5 (10-9-11) - Compile command changed for new Oneiric toolchain (other Distro's going to it).  Installer installs all needed Magick Rotation files and deletes install files.  Added LVDS# bug fix by Jayhawk.  Udev rules updated and magick group added for security enhancement.
-v. 1.4 (5-15-11) - Added Coordinate Transformation Matrix to xrotate.py for evdev device rotation.  Added whitelist.py to enable the Magick Rotation icon in Ubuntu Natty's Unity system tray.  Firstrun install now adds magick-rotation to the autostart.
+v. 1.5 (10-09-11) - Compile command changed for new Oneiric toolchain (other Distro's going to it).  Installer installs all needed Magick Rotation files and deletes install files.  Added LVDS# bug fix by Jayhawk.  Udev rules updated and magick group added for security enhancement.
+v. 1.4 (05-15-11) - Added Coordinate Transformation Matrix to xrotate.py for evdev device rotation.  Added whitelist.py to enable the Magick Rotation icon in Ubuntu Natty's Unity system tray.  Firstrun install now adds magick-rotation to the autostart.
 v. 1.3 (01-28-11) - Added Dell XT & XT2, HP Compaq TC4200 & TC4400, Lenovo ThinkPads, and MagickExtras folder containing Rafi Rubin's modified dell-wmi & dkms.  Fixed disable/enable switch  ChangeLog moved from Magick-README.txt to separate ChangeLog file.
-v. 1.2 (12-03-11) - Removed hp-wmi out of magick-rotation, changed magick-rotation to listen to xrandr events, added installer to help get dependencies and compile check.c
+v. 1.2 (12-03-10) - Removed hp-wmi out of magick-rotation, stopped polling and went to listening to xrandr events and the hp-wmi event, added installer to get dependencies for check.c compile (to checkmagick) and install udev rule.
 v. 1.1 (10-28-10) - Added touch on/off feature with associated icons, changed config file from .conf to .xml, removed separator line above buttons, modified About dialog label, changed description box in magick-rotation
 v. 1.0 (10-20-10) - Major code reorganization by jayhawk - converted scripts to be object oriented and separated out the notifier, configuration file, GUI, and main sections
 
